--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -1,7 +1,7 @@
 
 name: shell
 
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]
 
 jobs:
   runshell:
@@ -19,6 +19,7 @@ jobs:
       id: shell
       uses: vmactions/freebsd-vm@main
       with:
+        release: "13.2"
         nat: |
           "8000": "80"
         envs: 'TestingDomain TEST_PREFERRED_CHAIN TEST_ACME_Server INPUT_*'
